2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/67525
	* parse.c (match_deferred_characteristics): Remove an assert, which
	allows an invalid SELECT TYPE selector to be detected.

2015-09-21  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/67615
	* resolve.c (gfc_resolve_code): Check for scalar expression in 
	arithmetic-if.

2015-09-10  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/67526
	* expr.c (gfc_check_init_expr): Do not dereference a NULL pointer.

2015-09-04  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR fortran/67429
	* error.c (gfc_clear_pp_buffer): Reset last_location, otherwise
	caret lines might be skipped when actually giving a diagnostic.

2015-08-07  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/66929
	* trans-array.c (gfc_get_proc_ifc_for_expr): Use esym as procedure
	symbol if available.

2015-08-05  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/64921
	* class.c (generate_finalization_wrapper): Set finalization
	procedure symbol's always_explicit attribute.

2015-08-03  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66942
	* trans-expr.c (gfc_conv_procedure_call): Avoid NULL pointer reference

2015-07-25  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/64986
	* trans-expr.c (gfc_trans_assignment_1): Put component deallocation
	code at the beginning of the block.

2015-07-21  Andre Vehreschild  <vehre@gcc.gnu.org>

	PR fortran/66035
	* trans-expr.c (alloc_scalar_allocatable_for_subcomponent_assignment):
	Compute the size to allocate for class and derived type objects
	correclty.
	(gfc_trans_subcomponent_assign): Only allocate memory for a
	component when the object to assign is not an allocatable class
	object (the memory is already present for allocatable class objects).
	Furthermore use copy_class_to_class for assigning the rhs to the
	component (may happen for dummy class objects on the rhs).

2015-07-17  Alessandro Fanfarillo  <fanfarillo.gcc@gmail.com>
