@@ -10233,10 +10233,14 @@ gfc_resolve_code (gfc_code *code, gfc_namespace *ns)
 	  {
 	    gfc_expr *e = code->expr1;
 
+	    gfc_resolve_expr (e);
+	    if (e->expr_type == EXPR_NULL)
+	      gfc_error ("Invalid NULL at %L", &e->where);
+
 	    if (t && (e->rank > 0
 		      || !(e->ts.type == BT_REAL || e->ts.type == BT_INTEGER)))
 	      gfc_error ("Arithmetic IF statement at %L requires a scalar "
-			 "REAL or INTEGER expression", &code->expr1->where);
+			 "REAL or INTEGER expression", &e->where);
 
 	    resolve_branch (code->label1, code);
 	    resolve_branch (code->label2, code);
