@@ -1,5 +1,10 @@
 2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/67614
+	* gfortran.dg/pr67614.f90: New test.
+
+2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/67525
 	* gfortran.dg/pr67525.f90: New test.
 
