@@ -1,5 +1,10 @@
 2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/67614
+	* resolve.c (gfc_resolve_code): Prevent ICE for invalid EXPR_NULL.
+
+2015-09-25  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/67525
 	* parse.c (match_deferred_characteristics): Remove an assert, which
 	allows an invalid SELECT TYPE selector to be detected.
